# Asagg

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yaml
asagg_lib/: __init__.py  asagg.py
asagg_lib/exceptions/: parameters.py
asagg_lib/typing/: generics.py
asagg_lib/utils/: extractor.py  formatter.py  list_operations.py  template_generator.py  validators.py
docs/: contribuition.md  index.md  todos.md
docs/api/: Asagg Class.md  asagg.md
docs/api/exceptions/: Parameters Exceptions.md
docs/api/typing/: ClassType.md
docs/api/utilities/: Extractor.md  Formatter.md  Validators.md
docs/api/utilities/List Operations/: Difference Between Lists.md
docs/stylesheets/: cards.css
docs/templates/: installation.md  introduction.md
docs/templates/html/: cards.html
tasks/: open_browser.py
tests/: test_asagg_getter.py  test_extractor.py
tests/asagg/: test_asagg_data.py  test_asagg_getter.py  test_asagg_setter.py
tests/utilities/: test_extractor.py  test_formatter.py  test_list_operations.py  test_validators.py
