[tool.poetry]
name = "asagg-lib"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto Barbosa Aparecido <pedr.augustobarbosa.aparecido@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-lenght = 80
exclude = [
    ".git",
    "__pycache__",
    "venv",
]

[tool.black]
line-length = 80
target-versions = ["py311"]
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | venv
 | _build
 | buck-out
 | build
 | \.flake8
 )/
'''

[tool.isort]
profile = "black"
line_length = 80
