[tool.poetry]
name = "asagg-lib"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto Barbosa Aparecido <pedr.augustobarbosa.aparecido@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
taskipy = "^1.12.0"
pytest-sugar = "^0.9.7"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.7"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.2"
pymdown-extensions = "^10.3.1"
materialx = "^1.38.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--ignore=tasks --doctest-modules"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
lint-fix = "black . && isort ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=asagg_lib -vv"
pre_test = "task lint"
post_test = "coverage html && python tasks/open_browser.py"

[tool.black]
line-length = 80
target-versions = ["py311"]
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | venv
 | _build
 | buck-out
 | build
 | \.flake8
 )/
'''

[tool.isort]
profile = "black"
line_length = 80
